# SentinelKarma

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  MANAGER_HELP.md  README.md  WHITEPAPER.md  deploy-quick.sh  deploy-sentinel-local.sh  docker-compose.yml  fix-nodejs.sh  manager.sh  nft_mappings.json  outputinstall
agent-python/: Dockerfile  Dockerfile.automint  auto_mint_monitor.py
app/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
data/: .gitignore
docs/: ATTACK_MITIGATION.md  DEPLOYMENT.md  DEPLOY_LOCAL.md  QUICKSTART_BLOCKING.md  README.md  WEB_DEVELOPER_GUIDE.md
infra/: saver.env
programs/seka/: Cargo.toml
programs/seka/src/: lib.rs
resources/: plan_karma_system.txt
scripts/: API_README.md  CONFIG_README.md  README_MINT.md  TS_API_README.md  auto_mint.conf  auto_mint_complete.py  auto_mint_monitor.py  docker-api.ts  docker_api.py  example-usage.ts  example_api_usage.py  mint-schema.json  mint-types.ts  mint_and_upload_logs.py  mint_types.py  nft_sync_daemon.py  package.json  populate_nft_mappings.py  scan_existing_nfts.py  sentinel-api.ts  sentinel_api.py  simple_nft_sync.sh  test_overburst.sh  transfer_seka.sh  tsconfig.json
sentinel/: .gitignore  Anchor.toml  BUILD_SUMMARY.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DEPLOY_LOCAL.md  DEVNET_DEPLOYMENT.md  DEV_KEYS.md  PRIVATE_KEYS.md  README.md  SECURITY_NOTICE.md  SHARE_WITH_PARTNER.md  deploy-keypair.json  deploy-local.sh  deploy.sh  initialize.py  (+9 more)
sentinel/programs/sentinel/: Cargo.toml
sentinel/programs/sentinel/src/: lib.rs  lib_fixed.rs
(+52 files in other folders)
