[package]
name = "seka"
version = "0.1.0"
edition = "2021"

[lib]
name = "seka"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18.14"
