[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
solana-program = "1.18"
